# mephi-laboratory-works

./: .bash_history  .gitconfig  .profile  README.md
Sem-2/lab1/: CMakeLists.txt  main.c  run_tests.c
Sem-2/lab1/libs/: matrix.c  matrix.h  type.c  type.h
Sem-2/lab1/libs/Errors/: error.c  error.h
Sem-2/lab1/libs/IO/: logger.c  logger.h
Sem-2/lab1/libs/UI/: menus.c  menus.h
Sem-2/lab1/libs/types/: float_type.c  float_type.h  int_type.c  int_type.h
Sem-2/lab1/tests/: test.c  test.h
Sem-2/lab1/tests/matrix/: matrix_tests.c  matrix_tests.h
Sem-2/lab1/tests/type/: type_tests.c  type_tests.h
Sem-2/lab2/: CMakeLists.txt  main.cpp  run.cpp  sequence_lib.cpp  sequence_lib.hpp  test.cpp  test_lib.cpp  test_lib.hpp
Sem-2/lab2/IO/: colored_logs.cpp  colored_logs.hpp
Sem-2/lab2/UI/: menus.cpp  menus.h  menus.hpp
Sem-2/lab2/data_structures/: DynamicArray.h  DynamicArray.hpp  LinkedList.h  LinkedList.hpp
Sem-2/lab2/exceptions/: BaseException.cpp  BaseException.h  Exception.cpp  Exception.h
Sem-2/lab2/exceptions/AssertionFailedException/: AssertionFailedException.cpp  AssertionFailedException.h  AssertionFailedException.hpp
Sem-2/lab2/exceptions/EmptyContainerException/: EmptyContainerException.cpp
Sem-2/lab2/exceptions/IndexOutOfRangeException/: IndexOutOfRangeException.cpp  IndexOutOfRangeException.h  IndexOutOfRangeException.hpp
Sem-2/lab2/exceptions/InvalidArgumentException/: InvalidArgumentException.cpp  InvalidArgumentException.hpp
Sem-2/lab2/sequences/: ArraySequence.h  ArraySequence.hpp  LinkedListSequence.h  LinkedListSequence.hpp  Sequence.h  Sequence.hpp
Sem-2/lab2/tests/: Test.cpp  Test.hpp  TestSuite.cpp  TestSuite.h  TestSuite.hpp  Tester.cpp  Tester.hpp
Sem-2/lab2/tests/ArraySequence_tests/: ArraySequence_tests.cpp  ArraySequence_tests.h  ArraySequence_tests.hpp
Sem-2/lab2/tests/DynamicArray_tests/: DynamicArray_tests.cpp  DynamicArray_tests.hpp
Sem-2/lab2/tests/LinkedListSequence_tests/: LinkedListSequence_tests.cpp  LinkedListSequence_tests.h  LinkedListSequence_tests.hpp
Sem-2/lab2/tests/LinkedList_tests/: LinkedList_tests.cpp  LinkedList_tests.hpp
Sem-2/lab3/: CMakeLists.txt  container_lib.cpp  container_lib.hpp  main.cpp  run.cpp  test.cpp
Sem-2/lab3/UI/: menus.cpp  menus.hpp
Sem-2/lab3/cmake/: FindSequenceLib.cmake  FindTestLib.cmake
Sem-2/lab3/containers/: base_container.hpp  i_enumerable.hpp  i_enumerator.hpp
Sem-2/lab3/containers/deque/: deque.hpp
Sem-2/lab3/containers/queue/: queue.hpp
Sem-2/lab3/containers/stack/: stack.hpp
Sem-2/lab3/persons/: person.cpp  person.hpp
Sem-2/lab3/tests/base_container/: base_container_tests.cpp  base_container_tests.hpp
Sem-2/lab3/tests/deque/: deque_tests.cpp  deque_tests.hpp
Sem-2/lab3/tests/person/: person_tests.cpp  person_tests.hpp
Sem-2/lab3/tests/queue/: queue_tests.cpp  queue_tests.hpp
Sem-2/lab3/tests/stack/: stack_tests.cpp  stack_tests.hpp
Sem-2/lab4/: .gitignore  CMakeLists.txt  run.cpp  test.cpp
Sem-2/lab4/UI/: menus.cpp  menus.hpp
Sem-2/lab4/cmake/: FindContainerLib.cmake  FindTestLib.cmake
Sem-2/lab4/tests/nary_tree/: nary_tree_tests.cpp  nary_tree_tests.hpp
Sem-2/lab4/trees/: nary_tree.hpp
Sem-2/lab4/trees/serializers/: nary_tree_serializer.hpp
Sem-3/lab1/: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  load_test  load_test.cpp  run.cpp  test  test.cpp
Sem-3/lab1/cmake/: FindExceptionLib.cmake  FindSequenceLib.cmake
Sem-3/lab1/data_structures/: SmartPtrDynamicArray.hpp  SmartPtrLinkedList.hpp
Sem-3/lab1/data_structures/SmartPtrDynamicArray/: SmartPtrDynamicArray.hpp
Sem-3/lab1/data_structures/SmartPtrLinkedList/: SmartPtrLinkedList.hpp
Sem-3/lab1/exceptions/EmptyPointerException/: EmptyPointerException.hpp
Sem-3/lab1/exceptions/ZeroReferenceDecrementException/: ZeroReferenceDecrementException.hpp
Sem-3/lab1/interface/: run.cpp
Sem-3/lab1/interface/backend/: install_dependencies.sh  run.cpp
Sem-3/lab1/interface/endpoints/: endpoints.cpp  endpoints.hpp
Sem-3/lab1/interface/frontend/: .gitignore  README.md  index.html
Sem-3/lab1/interface/state/: state.cpp  state.hpp
Sem-3/lab1/load_testing_results/: Kogan's smart pointers.html  excecution_time_results.txt  memory_consumption_results.txt  sample_results.txt
Sem-3/lab1/load_testing_results/Kogan's smart pointers_files/: client  css2.css  main.ts
Sem-3/lab1/sequences/: SmartPtrArraySequence.hpp  SmartPtrLinkedListSequence.hpp  SmartPtrSequence.hpp
Sem-3/lab1/smart_pointers/: SharedPtr.hpp  UniquePtr.hpp
Sem-3/lab1/smart_pointers/ControlBlock/: ControlBlock.hh  ControlBlock.hpp
Sem-3/lab1/smart_pointers/SharedPtr/: SharedPtr.hh  SharedPtr.hpp  SharedPtr.inc
Sem-3/lab1/smart_pointers/UniquePtr/: UniquePtr.hh  UniquePtr.hpp
Sem-3/lab1/smart_pointers/WeakPtr/: WeakPtr.hh  WeakPtr.hpp
Sem-3/lab1/tests/: sample_suite.cpp  sample_suite.hpp
Sem-3/lab1/tests/SharedPtr_tests/: SharedPtr_tests.cpp  SharedPtr_tests.hpp
Sem-3/lab1/tests/SmartPtrArraySequence_tests/: SmartPtrArraySequence_tests.cpp  SmartPtrArraySequence_tests.hpp
Sem-3/lab1/tests/SmartPtrDynamicArray_tests/: SmartPtrDynamicArray_tests.cpp  SmartPtrDynamicArray_tests.hpp
Sem-3/lab1/tests/SmartPtrLinkedListSequence_tests/: SmartPtrLinkedListSequence_tests.cpp  SmartPtrLinkedListSequence_tests.hpp
Sem-3/lab1/tests/SmartPtrLinkedList_tests/: SmartPtrLinkedList_tests.cpp  SmartPtrLinkedList_tests.hpp
Sem-3/lab1/tests/UniquePtr_tests/: UniquePtr_tests.cpp  UniquePtr_tests.hpp
Sem-3/lab1/tests/WeakPtr_tests/: WeakPtr_tests.cpp  WeakPtr_tests.hpp
libraries/container_lib/source/: CMakeLists.txt  container_lib.cpp  container_lib.hpp
libraries/container_lib/source/cmake/: FindSequenceLib.cmake  FindTestLib.cmake
libraries/container_lib/source/containers/: i_enumerable.hpp  i_enumerator.hpp
libraries/exception_lib/source/: CMakeLists.txt
libraries/sequence_lib/source/: CMakeLists.txt  sequence_lib.cpp
libraries/sequence_lib/source/data_structures/: DynamicArray.hpp  LinkedList.hpp
libraries/test_lib/source/: CMakeLists.txt
libraries/test_lib/source/tests/: Test.hpp  (+1 more)
(+159 files in other folders)
