cmake_minimum_required(VERSION 3.22)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab2 main.cpp data_structures/DynamicArray.h data_structures/LinkedList.h sequences/Sequence.h sequences/ArraySequence.h sequences/LinkedListSequence.h exceptions/BaseException.cpp exceptions/BaseException.h exceptions/IndexOutOfRangeException/IndexOutOfRangeException.cpp exceptions/IndexOutOfRangeException/IndexOutOfRangeException.h exceptions/InvalidArgumentException/InvalidArgumentException.h exceptions/InvalidArgumentException/InvalidArgumentException.cpp exceptions/EmptyContainerException/EmptyContainerException.cpp exceptions/EmptyContainerException/EmptyContainerException.h)
